--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Random Horse Image New Tab",
   "version": "1.0",
   "description": "Display a random horse image on new tab.",
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "storage"],
   "host_permissions": ["https://script.google.com/*"],
   "chrome_url_overrides": {
     "newtab": "index.html"
