--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,17 +3,12 @@
   "name": "Horse Wallpaper Extension",
   "version": "1.0",
   "description": "Display a random horse image on new tab.",
-  "permissions": ["tabs", "storage"],
-  "host_permissions": ["https://script.google.com/*"],
+  "permissions": ["tabs", "storage", "unlimitedStorage"],
+  "host_permissions": ["https://*/*", "http://*/*"],
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
   "background": {
     "service_worker": "background.js"
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
   }
 }
